--- a/2020-04-05git指令简单操作远程仓库实现代码托管.md
+++ b/2020-04-05git指令简单操作远程仓库实现代码托管.md
@@ -63,7 +63,7 @@ git config --global user.email "your email"
 
 比如我的代码：
 
-` git remote add origin git@github:mine-blog/test.git `
+` git remote add origin git@github.com:mine-blog/test.git `
 
 ` git push -u origin master `
 
