--- a/2020-04-05git指令简单操作远程仓库实现代码托管.md
+++ b/2020-04-05git指令简单操作远程仓库实现代码托管.md
@@ -87,5 +87,16 @@ git push -u origin master
 
 ` git clone git@github.com:mine-blog/django.git `
 
+使用的过程出现此问题
+
+ERROR: Repository not found.
+
+解决办法：
+
+git remote set-url origin git@github.com:xxxxxx/xxxxxx.git
+
+
+在这里要说结束了，拜拜。
+
 
 
