--- a/2020-04-05git指令简单操作远程仓库实现代码托管.md
+++ b/2020-04-05git指令简单操作远程仓库实现代码托管.md
@@ -67,7 +67,7 @@ git config --global user.email "your email"
 
 ` git push -u origin master `
 
-这里是将本地可的所有美容推送到远程库上去，但如果你进行操作此步骤时出错，请操作如下代码：
+这里是将本地可的所有内容推送到远程库上去，但如果你进行操作此步骤时出错，请操作如下代码：
 
 ```
 git pull origin master
